need to remember the module commands